# Virtual-Machine

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
algorithm-layer/: Makefile.am  Makefile.in
algorithm-layer/accelerator/: Makefile.am  Makefile.in  kvmAccelerator.c  kvmAccelerator.h
algorithm-layer/helpers/: Makefile.am  Makefile.in  new.c
algorithm-layer/include/: Makefile.am  Makefile.in  accelerator.h  loader.h  new.h  types.h  virtualMachine.h
algorithm-layer/loader/: Makefile.am  Makefile.in  binaryLoader.c  binaryLoader.h
algorithm-layer/virtualMachine/: Makefile.am  Makefile.in  x86VirtualMachine.c  x86VirtualMachine.h
application-layer/: Makefile.am  Makefile.in  main.c  vcpuThread.c  vcpuThread.h
autom4te.cache/: output.0  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
include/: abstractClass.h  accelerator.h  kvmAccelerator.h  new.h
src/: kvmAccelerator.c  main.c
test/: Makefile.am  Makefile.in
test/application-layer-testcase/: Makefile.am  Makefile.in
test/application-layer-testcase/test1/: Makefile.am  Makefile.in  test1.S
